// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with completely filled placeholder 1`] = `
<div
  class="customUrl"
>
  <span>
    sulu.io/
  </span>
  <div
    class="input default left"
  >
    <input
      type="text"
      value="test1"
    />
  </div>
  <span>
    /
  </span>
  <div
    class="input default left"
  >
    <input
      type="text"
      value="test2"
    />
  </div>
</div>
`;

exports[`Render with empty placeholder 1`] = `
<div
  class="customUrl"
>
  <div
    class="input default left"
  >
    <input
      type="text"
      value=""
    />
  </div>
  <span>
    .sulu.io/
  </span>
  <div
    class="input default left"
  >
    <input
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Render with partially filled placeholder 1`] = `
<div
  class="customUrl"
>
  <div
    class="input default left"
  >
    <input
      type="text"
      value="test"
    />
  </div>
  <span>
    .
  </span>
  <div
    class="input default left"
  >
    <input
      type="text"
      value=""
    />
  </div>
  <span>
    .sulu.io
  </span>
</div>
`;
